Fixing overflow on pre code listings

--- a/css/modern.css
+++ b/css/modern.css
@@ -70,6 +70,7 @@ pre {
   padding-right: 1em;
   padding-left: 1em;
   border: 1px dotted black;
+  overflow: auto;
 }
 
 p.postinfo {
